# RaghavaDhanya.github.io

./: .gitignore  404.html  CNAME  README.md  app.css  config.yml  index.html  index.xml  manifest.json  mit.txt  resume.html  service-worker.js  sitemap.xml
.github/workflows/: gh-pages.yml
CSS/: index.css
archives/: index.html
categories/: index.html  index.xml
content/: license.md
css/: style.css
js/: index.js
license/: index.html
page/1/: index.html
posts/: index.html  index.xml
static/: CNAME
styles/: 404.css  main_dark.css
tags/: index.html  index.xml
tools/blog-animations/: optimize_covers.py  pyproject.toml
tools/blog-animations/blog_animations/: __init__.py  covers.py  render.py
tools/blog-animations/high-velocity-trading-ml-systems/: pair_diverge_animation.html  pair_example_animation.html  pair_revert_animation.html  render_pair_diverge.py  render_pair_example.py  render_pair_revert.py
tools/blog-animations/intuitive-understanding-of-pca/: correlation_animation.html  covariance_transform_animation.html  cover.html  eigenvectors_animation.html  pca_animation.html  projection_animation.html  render_correlation.py  render_covariance_transform.py  render_cover.py  render_eigenvectors.py  render_pca.py  render_projection.py  render_scaling_matrix.py  scaling_matrix_animation.html
tools/blog-animations/semantic-image-search/: PALETTE.md  ann_clustering.html  inference_flow.html  render_ann_clustering.py  render_inference_flow.py  render_two_tower_generic.py  render_two_tower_ours.py  two_tower_generic.html  two_tower_ours.html
(+99 files in other folders)
